# labs-db-bfu

./: README.md  main.py  pyproject.toml
labs_db_bfu/: __init__.py
labs_db_bfu/cfg/: .env  .env.example  __init__.py  configuration.py  db_connector.py
labs_db_bfu/lab_1/: __init__.py  lab_1.py
